Wed May 23 13:00:55 UTC 2007  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/config-vxworks6.2:
        * ace/config-vxworks6.3:
        * ace/config-vxworks6.4:
          log2 is only not available in rtp mode with the gnu compiler.

        * ace/config-vxworks6.2:
          Removed part for the ghs compiler, that is really not tested and
          just a left over of the vxworks 5.5.x support

        * ace/OS_NS_unistd.cpp:
          Initialize local variable with 0, layout changes

Wed May 23 11:31:55 UTC 2007  Johnny Willemsen  <jwillemsen@remedy.nl>

        * bin/generate_rel_manpages:
        * etc/*.doxygen:
          Updated for the upgrade to doxygen 1.5.2-2

Wed May 23 09:40:55 UTC 2007  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/Mem_Map.cpp:
          Use shm_open/shm_unlink on VxWorks. This doesn't fix the failing of
          the tests using mmap on our targets because they are using a NFS file
          system and we have identified several problems with that which have
          been reported to WindRiver.

Wed May 23 07:17:55 UTC 2007  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/Mem_Map_Test.cpp:
          Added filenames to the mmap error messages so that we can see which
          mmap failed

Wed May 23 05:12:04 2007  Ossama Othman  <ossama othman at symantec dot com>

	* ace/OS_NS_math.h (ace_log2_helper):

	  Added comments about what the ACE_LACKS_LOG2 case actually
	  does.

	  Store precomputed value of 1/log(2.0) to save an expensive
	  division and computing log(2.0) in each call.

Tue May 22 17:41:20 UTC 2007  Olli Savia  <ops@iki.fi>

        * ace/config-netbsd.h:
          Defined ACE_LACKS_LOG2.

Tue May 22 12:12:55 UTC 2007  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/Log_Msg_Test.cpp:
          Can't unlink on advance with VxWorks 6.4 (at least on NFS)

Tue May 22 11:10:30 UTC 2007  Olli Savia  <ops@iki.fi>

        * ace/OS_NS_math.h:
        * ace/OS_NS_math.inl: