@@ -1,3 +1,9 @@
+Wed May 23 13:19:55 UTC 2007  Johnny Willemsen  <jwillemsen@remedy.nl>
+
+        * tests/Process_Manager_Test.cpp:
+          Added %P to all debug statements so that we can see the process id
+          in each line
+
 Wed May 23 13:00:55 UTC 2007  Johnny Willemsen  <jwillemsen@remedy.nl>
 
         * ace/config-vxworks6.2:
